<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>open-source-parent</artifactId>
		<groupId>com.topdesk</groupId>
		<version>4.0.0</version>
	</parent>
	<artifactId>time-transformer-agent</artifactId>
	<version>2.1.1-SNAPSHOT</version>
	<name>Time Transformer Agent</name>
	<description>Instrumentation agent to change System.currentTimeMillis() and System.nanoTime() for testing purposes</description>

	<properties>
		<java.version>11</java.version> <!-- Target Java version 11, so old projects can also benefit from the TimeTransformer -->
	</properties>
	
	<developers>
		<developer>
			<name>Joep Weijers</name>
			<email>j.weijers@topdesk.com</email>
			<organization>TOPdesk</organization>
			<organizationUrl>https://www.topdesk.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/TOPdesk/time-transformer-agent.git</connection>
		<developerConnection>scm:git:https://github.com/TOPdesk/time-transformer-agent.git</developerConnection>
		<url>https://github.com/topdesk/time-transformer-agent</url>
		<tag>time-transformer-agent-2.0.0</tag>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/TOPdesk/time-transformer-agent/issues</url>
	</issueManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.12.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>9.8</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy-agent</artifactId>
			<version>1.17.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.16.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>*ITWithTimeManipulation.java</exclude>
							</excludes>
							<argLine>-javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading</argLine>
						</configuration>
					</execution>
					<execution>
						<id>time-manipulated-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<includes>
								<include>*ITWithTimeManipulation.java</include>
							</includes>
							<argLine>-javaagent:${project.build.directory}/${project.artifactId}-${project.version}.jar</argLine>
						</configuration>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>false</addClasspath>
						</manifest>
						<manifestEntries>
							<Premain-Class>com.topdesk.timetransformer.agent.InstrumentationAgent</Premain-Class>
							<Boot-Class-Path>${project.artifactId}-${project.version}.jar</Boot-Class-Path>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<includes>
									<include>org.ow2.asm:asm</include>
								</includes>
							</artifactSet>
							<relocations>
								<relocation>
									<pattern>org.objectweb.asm</pattern>
									<shadedPattern>org.shaded.asm</shadedPattern>
								</relocation>
							</relocations>
							<filters>
								<filter>
									<artifact>org.ow2.asm:asm</artifact>
									<excludes>
										<exclude>module-info.class</exclude>
										<exclude>META-INF/MANIFEST.MF</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.2.5</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<source>8</source>
					<doclint>all,-missing</doclint>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
